tgransiciones entre tipos de visualizaciones

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -36,6 +36,7 @@
 	<div id="chart-options">
 		<div id="set-timeline" class="option">timeline</div>
 		<div id="set-tree" class="option">árbol</div>
+		<div id="set-graph" class="option">grafo</div>
 		<div id="group-singles" class="option">agrupar comentarios sin respuesta</div>
 		<div id="show-interaction" class="option">mostrar intereacciones</div>
 	</div>
