nuevo menú de selección de opciones

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -34,11 +34,11 @@
 		<div id="d3-chart-container"></div>
 	</div>
 	<div id="chart-options">
-		<div id="set-timeline" class="option">timeline</div>
-		<div id="set-tree" class="option">árbol</div>
-		<div id="set-graph" class="option">grafo</div>
+		<div id="set-tree" class="option on">ÁRBOL</div>
+		<div id="set-timeline" class="option">TIMELINE</div>
+		<div id="set-graph" class="option">GRAFO</div>
+		<div id="set-interaction" class="option">INTERACCIONES</div>
 		<div id="group-singles" class="option">agrupar comentarios sin respuesta</div>
-		<div id="show-interaction" class="option">mostrar intereacciones</div>
 	</div>
 
 	<div id="chart-messages" class="expandable" data-width="max">
