intento de agrupación de nodos

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -42,9 +42,9 @@
 			<div id="set-interaction" class="layout radio">INTERACCIONES</div>
 		</div>
 		<div class="options">
-			<div class="option">Agrupar por: </div>
-			<div id="group-author" class="set-graph option check author">autor del mensaje</div>
-			<div id="group-replied" class="set-graph option check">autor respondido</div>
+			<span>Agrupar por...</span>
+			<div id="group-author" class="option radio">autor del mensaje</div>
+			<div id="group-replied" class="option radio">autor respondido</div>
 		</div>
 	</div>
 
