terminada la selección de conversaciones, a falta de detalles

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -50,7 +50,7 @@
 
 	<div id="chart-messages" class="expandable" data-width="max">
 		<h2 class="redtitle fa fa-comments"> CONVERSACIÓN<div class="fa fa-chevron-right expand"></div></h2>
-		<div id="chart-ouput"></div>
+		<div id="chart-output"></div>
 	</div>
 	
 	<div id="chart-control" class="expandable" data-width="500px">
