--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -42,9 +42,7 @@
 			<div id="set-interaction" class="layout radio">INTERACCIONES</div>
 		</div>
 		<div class="options">
-			<span>Agrupar por...</span>
-			<div id="group-author" class="option radio">autor del mensaje</div>
-			<div id="group-replied" class="option radio">autor respondido</div>
+			<div id="group-author" class="option radio">Agrupar por autor</div>
 		</div>
 	</div>
 
