--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -27,12 +27,14 @@
 	<script type="text/javascript" src="js/d3Thread.lib.js"></script>
 </head>
 <body id="conversation">
-	<div id="d3-frequency">
-		<h2>Frecuencia (mensajes/hora)</h2>
-	</div>
 	<div id="d3-chart">
 		<h2 class="redtitle fa fa-eye"> GRÁFICO</h2>
-		<div id="d3-chart-container"></div>
+		<div id="d3-chart-container">
+			<div id="d3-frequency">
+				<h2>Frecuencia (mensajes/hora)</h2>
+			</div>
+			<!-- <div class="mask"></div> -->
+		</div>
 	</div>
 	<div id="chart-options">
 		<div class="layouts">
