--- a/src/popup.html
+++ b/src/popup.html
@@ -18,106 +18,6 @@
 	<script type="text/javascript" src="js/dialog.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
 </head>
-<body>
-	<div id="header">
-		<div id="profile-item" class="fa fa-chevron-down">
-			<img id="user-avatar" />
-			<span id="user-nickname"></span>
-		</div>
-	</div><!-- header -->
-
-	<div id="messages-container" class="container">
-		<div id="navigation">
-			<!-- SECCION. MENSAJES -->
-			<div id="msg-section" class="section-container">
-				<h1>mensajes</h1>
-				<ul class="navigator">
-					<li id="sigo" class="board-selector">suscripciones</li>
-					<li id="todo" class="board-selector">todos</li>
-					<li id="mios" class="board-selector">propios</li>
-					<li id="priv" class="board-selector">privados</li>
-					<li id="favs" class="board-selector">favoritos</li>
-				</ul>
-			</div>
-			<!-- SECCION. TEMAS -->
-			<div id="thm-section" class="section-container">
-				<h1>temas</h1>
-				<ul id="themes-follow" class="navigator"></ul>
-			</div>
-		</div><!-- navigation -->
-
-		<div id="messages-header" class="messages-header">
-			<div id="board-info">
-				<div class="nav">
-					<a id="history-left" class="button fa fa-arrow-left"></a>
-					<a id="history-right" class="button fa fa-arrow-right"></a>
-					<a id="search-button" class ="button fa fa-search"></a>
-				</div>
-				<div id="board-title" class="fa fa-chevron-down"></div>
-				<div id="board-description"></div>
-			</div>
-		</div>
-		<form class="search">
-			<i id="searching" class="fa fa-cog fa-spin"></i>
-			<span id="search-info"></span>
-			<input name="searchTXT" type="text" value="" placeholder="buscar…" id="searchTXT"/>
-			<a id="search-down" class="button fa fa-angle-down"></a>
-			<a id="search-up" class="button fa fa-angle-up"></a>
-		</form>
-
-		<div id="messages">
-			
-			<div id="board" class="message-list board"></div>
-			<div id="tree-board" class="board">
-				<div class="tree-toolbar">
-					<div id="closetree" class="btn fa fa-times"> CERRAR</div>
-					<div class="controls">
-						<div id="noindent" class="btn fa fa-align-justify"> VER COMO LISTA</div>
-						<div id="mouse-follow" class="btn fa fa-arrows-h on"> SEGUIMIENTO</div>
-						<div id="show-d3" class="btn fa fa-eye"> VISUALIZAR</div>
-					</div>
-				</div>
-				<div id="tree"></div>
-			</div>
-		</div>
-
-		<!-- SECCION. EDITOR -->
-		<div id="edit-section">
-			<h1 id="edit-section-h1" class="fa fa-chevron-up"> NUEVO MENSAJE</h1>
-			<span class="edit-description">Información</span>
-			<div id="editor-container"></div> <!-- aquí se carga dinámicamente el editor -->
-		</div>
-	</div> <!-- messages-container -->
-
-	<div id="profile-container" class="container">
-		<!-- SECCION. PERFIL -->
-		<div id="profile-section">
-			<div id="logout" title="cerrar sesión" class="fa fa-sign-out"></div>
-			<div class="info">
-				<img id="profile-avatar" />
-				<span id="profile-fullname"></span>
-				<span id="profile-nickname"></span> <br />
-				<span id="profile-description"></span>
-			</div>
-			<div class="selector">
-				<div id="follow-to" class="selector-item">
-					<h4>sigo a <span class="number"></span> usuarios</h4>
-					<ul class="profile-list"></ul>
-				</div>
-				<div id="follow-me" class="selector-item">
-					<h4>me siguen <span class="number"></span> usuarios</h4>
-					<ul class="profile-list"></ul>
-				</div>
-				<div id="themes-follow" class="selector-item">
-					<h4>sigo <span class="number"></span> temas</h4>
-					<ul class="profile-list"></ul>
-				</div>
-				<div id="themes-write" class="selector-item">
-					<h4>pruedo escribir en <span class="number"></span> temas</h4>
-					<ul class="profile-list"></ul>
-				</div>
-			</div> <!-- selector -->
-		</div>
-	</div> <!-- profile-container -->
+<body id="eskup-popup">
 </body>
 </html>
