--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -58,7 +58,7 @@
 		<h2 class="redtitle fa fa-sliders"> SELECCIÓN<div class="fa fa-chevron-circle-down expand"></div></h2>
 		<div class="content">
 			<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="OR"></b> de los siguientes criterios:</p>
-			<div class="users-list">
+			<div class="section users-list">
 				<h3>Usuarios (<span id="n-users"></span>)<span id="check-all-users" class="check"></span></h3>
 				<div class="list-head item">
 					<span id="sort-nickname" class="nickname sort-users fa fa-sort" data-field="nickname"> nickname</span>
@@ -70,15 +70,15 @@
 				</div>
 				<ul class="list"></ul>
 			</div>
-			<div class="words-list">
+			<div class="section words-list">
 				<h3>Top Palabras</h3>
 				<ol class="list columns"></ol>
 			</div>
-			<div class="images-list">
+			<div class="section images-list">
 				<h3>Imágenes</h3>
 				<ul class="list"></ul>
 			</div>
-			<div class="videos-list">
+			<div class="section videos-list">
 				<h3>Vídeos</h3>
 				<ul class="list"></ul>
 			</div>
