intento de selección sobre el timeline

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="css/popup.css" type="text/css" />
 	<link rel="stylesheet" href="css/d3Thread.css" type="text/css" />
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
@@ -46,16 +46,14 @@
 	</div>
 
 	<div id="chart-messages" class="expandable on">
-		<h2 class="redtitle fa fa-comments"> CONVERSACIÓN
-			<div class="fa fa-chevron-circle-down expand"></div>
-		</h2>
+		<h2 class="redtitle fa fa-comments"> CONVERSACIÓN</h2>
 		<div class="content">
 			<div id="chart-output"></div>
 		</div>
 	</div>
 	
 	<div id="chart-control" class="expandable on">
-		<h2 class="redtitle fa fa-sliders"> SELECCIÓN<div class="fa fa-chevron-circle-down expand"></div></h2>
+		<h2 class="fa fa-sliders"> SELECCIÓN</h2>
 		<div class="content">
 			<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="OR"></b> de los siguientes criterios:</p>
 			<div class="section users-list">
