--- a/src/popup.html
+++ b/src/popup.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<link href="http://netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:700italic,400,300,700,600' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/popup.css" type="text/css" />
 	<link rel="stylesheet" href="css/editor.css" type="text/css" />
