--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -39,7 +39,7 @@
 			<div id="set-interaction" class="layout radio">INTERACCIONES</div>
 		</div>
 		<div class="options">
-			<div id="group-author" class="option radio">Agrupar por autor</div>
+			<div id="group-author" class="option check">Agrupar por autor</div>
 		</div>
 	</div>
 
@@ -55,7 +55,7 @@
 		<div class="content">
 			<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="OR"></b> de los siguientes criterios:</p>
 			<div class="section users-list">
-				<h3>Usuarios (<span id="n-users"></span>)<span id="check-all-users" class="check"></span></h3>
+				<h3 id="check-all-users" class="check">Usuarios (<span id="n-users"></span>)</h3>
 				<div class="list-head item">
 					<span id="sort-nickname" class="nickname sort-users fa fa-sort" data-field="nickname"> nickname</span>
 					<span class="color-picker"></span>
