separado el código en partes

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -24,7 +24,11 @@
 	<script type="text/javascript" src="js/messageControl.js"></script>
 	<script type="text/javascript" src="js/d3Helpers.js"></script>
 	<script build="remove" type="text/javascript" src="js/d3SampleData.js" exclude="1"></script>
-	<script type="text/javascript" src="js/d3Thread.lib.js"></script>
+	<script type="text/javascript" src="js/d3Controller.js"></script>
+	<script type="text/javascript" src="js/d3Conversation.js"></script>
+	<script type="text/javascript" src="js/d3DataProcessor.js"></script>
+	<script type="text/javascript" src="js/d3Frequency.js"></script>
+	<script type="text/javascript" src="js/d3Graph.js"></script>
 </head>
 <body id="conversation">
 	<div id="d3-chart">
