menú cntextual de mensajes

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -47,15 +47,17 @@
 		</div>
 	</div>
 
-	<div id="chart-messages" class="expandable on">
+	<div id="chart-messages" class="expandable">
 		<h2 class="redtitle fa fa-comments"> CONVERSACIÓN</h2>
+		<div class="fix fa fa-thumb-tack"></div>
 		<div class="content">
 			<div id="chart-output"></div>
 		</div>
 	</div>
 	
-	<div id="chart-control" class="expandable on">
+	<div id="chart-control" class="expandable">
 		<h2 class="fa fa-sliders"> SELECCIÓN</h2>
+		<div class="fix fa fa-thumb-tack"></div>
 		<div class="content">
 			<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="OR"></b> de los siguientes criterios:</p>
 			<div class="section users-list">
