el editor de mensajes aparece en un modal

--- a/src/popup_content.html
+++ b/src/popup_content.html
@@ -23,6 +23,7 @@
 			<h1>temas</h1>
 			<ul id="themes-follow" class="navigator"></ul>
 		</div>
+		<div id="edit-button">NUEVO MENSAJE</div>
 	</div><!-- navigation -->
 
 	<div id="messages-header" class="messages-header">
@@ -45,7 +46,6 @@
 	</form>
 
 	<div id="messages">
-		
 		<div id="board" class="message-list board"></div>
 		<div id="tree-board" class="board">
 			<div class="tree-toolbar">
@@ -58,13 +58,6 @@
 			</div>
 			<div id="tree"></div>
 		</div>
-	</div>
-
-	<!-- SECCION. EDITOR -->
-	<div id="edit-section">
-		<h1 id="edit-section-h1" class="fa fa-chevron-up"> NUEVO MENSAJE</h1>
-		<span class="edit-description">Información</span>
-		<div id="editor-container"></div> <!-- aquí se carga dinámicamente el editor -->
 	</div>
 </div> <!-- messages-container -->
 
