--- a/src/editor.html
+++ b/src/editor.html
@@ -1,4 +1,5 @@
 <div id="editor">
+	<div id="editor-title">Título</div>
 	<div id="commands">
 		<div id="counter">280</div>
 		<div class="send" id="send" data-command="send">ENVIAR</div>
