algunos arreglos de funcionalidad del editor, incluyendo el título y el cierre en el botón cancelar

--- a/src/editor.html
+++ b/src/editor.html
@@ -1,5 +1,5 @@
+<div id="editor-title"></div>
 <div id="editor">
-	<div id="editor-title">Título</div>
 	<div id="commands">
 		<div id="counter">280</div>
 		<div class="send" id="send" data-command="send">ENVIAR</div>
