casi terminado el editor de nuevos mensajes

--- a/src/editor.html
+++ b/src/editor.html
@@ -1,4 +1,5 @@
 <div id="editor-title"></div>
+<div id="replying-message"></div>
 <div id="editor">
 	<div id="commands">
 		<div id="counter">280</div>
