eliminadas todas las apariciones de la función showEditor reemplazada por la clase Editor

--- a/src/editor.html
+++ b/src/editor.html
@@ -24,7 +24,7 @@
 	</div>
 
 	<div id="newmessage-container">
-		<div id="newimage" class="fa fa-paperclip">
+		<div id="newimage">
 			<canvas id="canvasimage"></canvas>
 			<div id="removeimage" class="fa fa-trash-o"></div>
 		</div> <!-- optional new image -->
