eliminadas google fonts de las opciones de la extension

--- a/src/options.html
+++ b/src/options.html
@@ -37,8 +37,9 @@
       </h3>
     </div>
     <div class="col-sm-4">
-      <h4>Google Fonts</h4>
+      <!--<h4>Google Fonts</h4>
       <div id="option-google-font" class="bfh-selectbox bfh-googlefonts" data-font="Lato"></div>
+      -->
       <h4>Fuente del sistema</h4>
       <div id="option-system-font" class="bfh-selectbox bfh-fonts" data-font="Arial"></div>
     </div>
