arreglos y mejoras con selectores de temas y de usuarios para el envío de mensajes

--- a/src/editor.html
+++ b/src/editor.html
@@ -32,7 +32,8 @@
 	</div>
 	<div id="destinations">
 		<div id="send2theme" class="send2">
-			<h2>TEMAS <i class="fa fa-angle-right"></i></h2>
+			<h2>TEMAS:</h2>
+			<div class="finder-widget-container"></div>
 		</div>
 
 		<div id="NOsend2theme" class="send2">
@@ -44,7 +45,8 @@
 		</div>
 
 		<div id="send2user" class="send2">
-			<h2>USUARIOS <i class="fa fa-angle-right"></i></h2>
-		</div>	<!-- privados -->
+			<h2>USUARIOS:</h2>
+			<div class="finder-widget-container"></div>
+		</div>
 	</div>
 </div>
