--- a/src/finder_widget.html
+++ b/src/finder_widget.html
@@ -1,6 +1,11 @@
-<ul class="linear">
-	<li class="finder">
-		<input type="text" placeholder="añadir...">
-		<ul></ul>
-	</li>
-</ul>
+<div class="finder-widget">
+	<ul class="linear">
+		<li class="finder">
+			<input type="text" placeholder="añadir...">
+			<div class="finder-list">
+				<div class="finder-title"><strong></strong><i class="close fa fa-times"></i></div>
+				<ul></ul>
+			</div>
+		</li>
+	</ul>
+</div>
