se añade un enlace en la extensión a la página de opciones

--- a/src/popup_content.html
+++ b/src/popup_content.html
@@ -64,7 +64,10 @@
 <div id="profile-container" class="container">
 	<!-- SECCION. PERFIL -->
 	<div id="profile-section">
-		<div id="logout" title="cerrar sesión" class="fa fa-sign-out"></div>
+		<div id="profile-toolbar">
+			<div id="logout" title="cerrar sesión" class="button fa fa-sign-out"></div>
+			<div id="options" title="opciones de la extensión" class="button fa fa-gears"></div>
+		</div>
 		<div class="info">
 			<img id="profile-avatar" />
 			<span id="profile-fullname"></span>
