--- a/src/popup.html
+++ b/src/popup.html
@@ -20,6 +20,5 @@
 	<script type="text/javascript" src="js/dialog.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
 </head>
-<body id="eskup-popup">
-</body>
+<body id="eskup-popup"></body>
 </html>
