arreglados problemas con la carga de nuevos tablones, y con el rellenado de la información del usuario del tablón actual

--- a/src/popup_content.html
+++ b/src/popup_content.html
@@ -15,6 +15,7 @@
 				<li id="todo" class="board-selector">todos</li>
 				<li id="mios" class="board-selector">propios</li>
 				<li id="priv" class="board-selector">privados</li>
+				<li id="menc" class="board-selector">menciones</li>
 				<li id="favs" class="board-selector">favoritos</li>
 			</ul>
 		</div>
