--- a/src/popup.html
+++ b/src/popup.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="js/windows.js"></script>
 	<script type="text/javascript" src="js/dialog.js"></script>
 	<script type="text/javascript" src="js/popup.js"></script>
+	<script type="text/javascript" src="js/popup-tutorial.js"></script>
 </head>
 <body id="eskup-popup"></body>
 </html>
