primera versión completa del tutorial de la extensión

--- a/src/popup_content.html
+++ b/src/popup_content.html
@@ -66,8 +66,9 @@
 	<!-- SECCION. PERFIL -->
 	<div id="profile-section">
 		<div id="profile-toolbar">
-			<div id="logout" title="cerrar sesión" class="button fa fa-sign-out"></div>
-			<div id="options" title="opciones de la extensión" class="button fa fa-gears"></div>
+			<div id="logout" title="Cerrar sesión de usuario" class="button fa fa-sign-out"></div>
+			<div id="tutorial" title="Ayuda de la extensión" class="button fa fa-question"></div>
+			<!-- <div id="options" title="opciones de la extensión" class="button fa fa-gears"></div> -->
 		</div>
 		<div class="info">
 			<img id="profile-avatar" />
