agregado el selector de imágenes

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -59,7 +59,7 @@
 		<h2 class="fa fa-sliders"> SELECCIÓN</h2>
 		<div class="fix fa fa-thumb-tack"></div>
 		<div class="content">
-			<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="OR"></b> de los siguientes criterios:</p>
+			<p><b>SELECCIONA</b> los mensajes que cumplen con <b id="switch" class="OR"></b> los siguientes criterios:</p>
 			<div class="section users-list">
 				<h3 id="check-all-users" class="check">Usuarios (<span id="n-users"></span>)</h3>
 				<div class="list-head item">
@@ -80,10 +80,10 @@
 				<h3>Imágenes</h3>
 				<ul class="list"></ul>
 			</div>
-			<div class="section videos-list">
+<!-- 			<div class="section videos-list">
 				<h3>Vídeos</h3>
 				<ul class="list"></ul>
-			</div>
+			</div> -->
 		</div>	<!-- content -->
 	</div>
 	<script type="text/javascript" src="js/d3Thread.js"></script>
