agregado estilo faltante en el html de visualización

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/d3Thread.css" type="text/css" />
 	<link rel="stylesheet" href="css/dialog.css" type="text/css" />
 	<link rel="stylesheet" href="css/editor.css" type="text/css" />
+	<link rel="stylesheet" href="css/tree.css" type="text/css" />
 	<link rel="stylesheet" href="css/rickshaw.css" type="text/css" />
 
 	<script build="no" type="text/javascript" src="lib/d3.3.4.8.min.js"></script>
