mejorada visualización timeline y eliminada temporalmente la de grafo

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -40,7 +40,7 @@
 		<div class="layouts">
 			<div id="set-tree" class="layout radio on">ÁRBOL</div>
 			<div id="set-timeline" class="layout radio">TIMELINE</div>
-			<div id="set-graph" class="layout radio">GRAFO</div>
+			<div id="set-graph" class="layout radio" style="display: none;">GRAFO</div>
 			<div id="set-interaction" class="layout radio">INTERACCIONES</div>
 		</div>
 		<div class="options">
