restaurada la máscara de textura en la visualización

--- a/src/d3Thread.html
+++ b/src/d3Thread.html
@@ -34,7 +34,7 @@
 <body id="conversation">
 	<div id="d3-chart">
 		<div id="d3-frequency"></div>
-		<!-- <div class="mask"></div> -->
+		<div class="mask"></div>
 	</div>
 	<div id="chart-options">
 		<div class="layouts">
