primeros pasos para arreglar el editor de imagenes

--- a/src/image_editor.html
+++ b/src/image_editor.html
@@ -11,6 +11,7 @@
 	<script type="text/javascript" src="lib/caman.3.3.0.full.min.js"></script>
 	
 	<script type="text/javascript" src="js/utils.js"></script>
+	<script type="text/javascript" src="js/dialog.js"></script>
 	<script type="text/javascript" src="js/editor.js"></script>
 	<script type="text/javascript" src="js/eskup-api.js"></script>
 	<script type="text/javascript" src="js/windows.js"></script>
@@ -19,13 +20,9 @@
 </head>
 <body>
 	<div id="masonry-container"></div>
-
 	<div id="editor-container"></div>
-
 	<div id="selector-editor">
-		
 		<canvas id="canvas-editor" width="600" height="600"></canvas>
-
 		<div id="canvas-controls">
 			<input id="back-color" name="back-color" type="color" value='#ffffff'>
 			<label for="back-color">color de fondo del lienzo</label>
