--- a/src/image_editor.html
+++ b/src/image_editor.html
@@ -6,6 +6,7 @@
 	<link rel="stylesheet" href="css/image-editor.css" type="text/css" />
 	
 	<script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
+	<!-- <script type="text/javascript" src="lib/fabric-1.5.0.min.js"></script> -->
 	<script type="text/javascript" src="lib/fabric.js"></script>
 	<script type="text/javascript" src="lib/masonry.min.js"></script>
 	<script type="text/javascript" src="lib/caman.3.3.0.full.min.js"></script>
@@ -32,51 +33,58 @@
 	<div id="editor-container" style="display: none;"></div>
 	<div id="selector-editor">
 		<canvas id="canvas-editor" width="600" height="600"></canvas>
+
 		<div id="canvas-controls">
-			<input id="back-color" name="back-color" type="color" value='#ffffff'>
-			<label for="back-color">color de fondo del lienzo</label>
-
-
-			<h1 class="off">Selector de imágenes</h1>
-			<div id="selector-content">
-				<input type="checkbox" name="show-small" id="show-small">
-				<label for="show-small">Mostrar imágenes pequeñas</label>
-				<div id="selector-items">
-					<div class="item">
-						<h2>Imagen Local</h2>
-						<label for="hd" class="btn">Selecciona Archivo</label>
-						<input type="file" id="hd" name="hd" accept="image/*">
-						<div id="hd_images"></div>
-					</div>
-					<div class="item">
-						<h2>Google</h2>
-						<form class="expandable" id="google-search-form">
-							<input type="text" id="google-search-string" placeholder="buscar una imagen…">
-							<input class="btn" type="submit" value="buscar" id="google-search">
-						</form>
-						<div id="google"></div>
-					</div>
-					<div class="item">
-						<h2>OpenClipArt Library</h2>
-						<form class="expandable" id="clips-search-form">
-							<input id="clips-search-string" placeholder="buscar un clip…">
-							<input class="btn" type="submit" value="buscar" id="clips-search">
-						</form>
-						<div id="clips">
-							<img id="clips-loader" src="/icon/loader.gif"></img>
-						</div>
-					</div>
-				</div>	
+			<div class="panel">
+				<h1>
+					<label for="back-color">Color de fondo del lienzo</label>
+					<input id="back-color" name="back-color" type="color" value='#ffffff'>	
+				</h1>
 			</div>
-
-			<div id="edit-object">
-				<h1 class="off">Paleta de objetos</h1>
-				<div>
+			
+			<div class="panel images-selector">
+				<h1>Insertar una imagen</h1>
+				<div class="panel-content">
+					<input type="checkbox" name="show-small" id="show-small">
+					<label for="show-small">Mostrar imágenes pequeñas</label>
+					<div id="selector-items">
+						<div class="item">
+							<h2>Imagen Local</h2>
+							<label for="hd" class="btn">Selecciona Archivo</label>
+							<input type="file" id="hd" name="hd" accept="image/*">
+							<div id="hd_images"></div>
+						</div>
+						<div class="item">
+							<h2>Google</h2>
+							<form class="expandable" id="google-search-form">
+								<input type="text" id="google-search-string" placeholder="buscar una imagen…">
+								<input class="btn" type="submit" value="buscar" id="google-search">
+							</form>
+							<div id="google"></div>
+						</div>
+						<div class="item">
+							<h2>OpenClipArt Library</h2>
+							<form class="expandable" id="clips-search-form">
+								<input id="clips-search-string" placeholder="buscar un clip…">
+								<input class="btn" type="submit" value="buscar" id="clips-search">
+							</form>
+							<div id="clips">
+								<img id="clips-loader" src="/icon/loader.gif"></img>
+							</div>
+						</div>
+					</div>	
+				</div>
+			</div>
+			
+			<div class="panel objects">
+				<h1>Insertar un objeto</h1>
+				<div class="panel-content">
 					<input id="canvas-rect" type="button" class="btn"/>
 					<input id="canvas-circle" type="button" class="btn"/>
 					<input id="canvas-triangle" type="button" class="btn"/>
 					<input id="canvas-line" type="button" class="btn"/>
 					<input id="canvas-text" type="button" class="btn" value="T">
+
 					<div>
 						<textarea id="canvas-text-value" width="100%" placeholder="escribe aquí el texto…"></textarea>
 
@@ -163,6 +171,8 @@
 						</div>
 					</div><!-- filters -->
 				</div>
+			</div>
+			<div class="panel">
 				<!-- Panel de dibujo -->
 				<h1 class="off">dibujo</h1>
 				<div>
@@ -175,13 +185,18 @@
 						<input type="color" id="draw-color" name="draw-color">
 					</div>
 				</div>
+			</div>
 
-				<h1 class="off">reordenar</h1>
+			<div class="panel">
+				<h1>reordenar</h1>
 				<div>
 					<input type="button" id="canvas-layout" value="layout">
 					<input type="checkbox" id="canvas-layout-crop">
 					<label for="canvas-layout-crop">Permitir recortar y transformar elementos para un mejor ajuste</label>
 				</div>
+			</div>
+
+			<div class="panel">
 				<!-- Panel de guardado y restauración -->
 				<h1 class="off">guardar o recuperar dibujo</h1>
 				<div>
@@ -191,14 +206,17 @@
 					<h2>cargar dibujo</h2>
 					<div id="saved-canvas">Aún no hay dibujos guardados</div>
 				</div>
+			</div>
 
-
+			<div class="panel">
 				<h1 class="off">capas</h1>
 				<div id="canvas-layers"><div></div>
 			</div>
-			<h1 class="off">Historial</h1>
-			<div id="canvas-history"></div>
 
+			<div class="panel">
+				<h1 class="off">Historial</h1>
+				<div id="canvas-history"></div>
+			</div>
 		</div> <!-- canvas controls -->
 	</div>
 </body>
