--- a/src/image_editor.html
+++ b/src/image_editor.html
@@ -9,9 +9,8 @@
 	
 	<script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
 	<script type="text/javascript" src="lib/fabric-1.5.0.min.js"></script>
-	<!-- <script type="text/javascript" src="lib/fabric.js"></script> -->
-	<script type="text/javascript" src="lib/masonry.min.js"></script>
-	<script type="text/javascript" src="lib/caman.3.3.0.full.min.js"></script>
+	<!-- <script type="text/javascript" src="lib/masonry.min.js"></script> -->
+	<script type="text/javascript" src="lib/caman.4.1.1.full.min.js"></script>
 	
 	<script type="text/javascript" src="js/utils.js"></script>
 	<script type="text/javascript" src="js/dialog.js"></script>
